<resources>
    <string name="app_name">Share Square</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_my_post">My Posts</string>
    <string name="menu_public_post">Public</string>
    <string name="menu_pending_post">Pending</string>
    <string name="menu_closed_post">Closed</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_send">Send</string>


    <string name="menu_home">Home</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_message">Message</string>
    <string name="menu_share">Share</string>
    <string name="menu_other">Other</string>
    <string name="menu_communicate">Communicate</string>
    <string name="read">Read</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
</resources>
