<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/MsgHeader_Readed"

        >

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:hint="From:"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_createdAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:gravity="end"
            android:hint="2019-10-9"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:hint="Content"
        android:textAppearance="?attr/textAppearanceListItem" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
android:background="@color/MgsFooter_Gray"
        >

        <Button
            android:id="@+id/btn_Read"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/active"
            android:text="@string/read"
            android:layout_marginLeft="8sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Button>

        <Button
            android:id="@+id/btn_Reply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/active"
            android:text="@string/reply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Button>

        <Button
            android:id="@+id/btn_Delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/warning"
            android:layout_marginRight="8sp"

            android:text="@string/delete"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Button>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>